E-shop-minimal/K8sInfra/products_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products
  labels:
    name: products
  namespace: e-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      name: products
  template:
    metadata:
      labels:
        name: products
    spec:
      containers:
        - name: products
          image: w3n3s/products:2.0.0
          resources:
            limits:
              cpu: 300m
              memory: 500Mi
            requests:
              cpu: 100m
              memory: 200Mi
          ports:
            - containerPort: 4002
          volumeMounts:
            - mountPath: /tmp
              name: tmp-volume
      volumes:
        - name: tmp-volume
          emptyDir:
            medium: Memory
      nodeSelector:
        beta.kubernetes.io/os: linux
