E-shop-minimal/K8sInfra/carts_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: carts
  labels:
    name: carts
  namespace: e-shop
spec:
  ports:
    
    - port: 80
      targetPort: 4003
  selector:
    name: carts
  type: LoadBalancer
