E-shop-minimal/K8sInfra/users_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: users
  labels:
    name: users
  namespace: e-shop
spec:
  ports:
    # the port that this service should serve on
    - port: 80
      targetPort: 4000
  selector:
    name: users
  type: LoadBalancer
