E-shop-minimal/K8sInfra/app_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: e-shop
  name: double-fan-out-ingress
  
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: users
            port:
              number: 4000
      - path: /products
        pathType: Prefix
        backend:
          service:
            name: products
            port:
              number: 4002
