E-shop-minimal/K8sInfra/full_deploy.yaml
---
#namespace 
apiVersion: v1
kind: Namespace
metadata:
  name: e-shop
---
#carts deployment + svc
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carts
  labels:
    name: carts
  namespace: e-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      name: carts
  template:
    metadata:
      labels:
        name: carts
    spec:
      containers:
        - name: carts
          image: w3n3s/carts:2.0.1
          resources:
            limits:
              cpu: 300m
              memory: 500Mi
            requests:
              cpu: 100m
              memory: 200Mi
          ports:
            - containerPort: 4003
          volumeMounts:
            - mountPath: /tmp
              name: tmp-volume
      volumes:
        - name: tmp-volume
          emptyDir:
            medium: Memory
      nodeSelector:
        beta.kubernetes.io/os: linux
---
apiVersion: v1
kind: Service
metadata:
  name: carts
  labels:
    name: carts
  namespace: e-shop
spec:
  ports:
    # the port that this service should serve on
    - port: 4003
      targetPort: 4003
  selector:
    name: carts
  type: ClusterIP

#users deployment + svc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users
  labels:
    name: users
  namespace: e-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      name: users
  template:
    metadata:
      labels:
        name: users
    spec:
      containers:
        - name: users
          image: w3n3s/users:2.0.0
          resources:
            limits:
              cpu: 300m
              memory: 500Mi
            requests:
              cpu: 100m
              memory: 200Mi
          ports:
            - containerPort: 4000
          volumeMounts:
            - mountPath: /tmp
              name: tmp-volume
      volumes:
        - name: tmp-volume
          emptyDir:
            medium: Memory
      nodeSelector:
        beta.kubernetes.io/os: linux
---
apiVersion: v1
kind: Service
metadata:
  name: users
  labels:
    name: users
  namespace: e-shop
spec:
  ports:
    # the port that this service should serve on
    - port: 4000
      targetPort: 4000
  selector:
    name: users
  type: ClusterIP
#products deployment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products
  labels:
    name: products
  namespace: e-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      name: products
  template:
    metadata:
      labels:
        name: products
    spec:
      containers:
        - name: products
          image: w3n3s/products:2.0.0
          resources:
            limits:
              cpu: 300m
              memory: 500Mi
            requests:
              cpu: 100m
              memory: 200Mi
          ports:
            - containerPort: 4002
          volumeMounts:
            - mountPath: /tmp
              name: tmp-volume
      volumes:
        - name: tmp-volume
          emptyDir:
            medium: Memory
      nodeSelector:
        beta.kubernetes.io/os: linux
---
apiVersion: v1
kind: Service
metadata:
  name: products
  labels:
    name: products
  namespace: e-shop
spec:
  ports:
    # the port that this service should serve on
    - port: 4002
      targetPort: 4002
  selector:
    name: products
  type: ClusterIP

# ingress service to
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: e-shop
  name: e-shop-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: users
            port:
              number: 4000
  - http:
      paths:
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: users
            port:
              number: 4000
  - http:
      paths:
      - path: /products
        pathType: Prefix
        backend:
          service:
            name: products
            port:
              number: 4002
  - http:
      paths:
      - path: /carts
        pathType: Prefix
        backend:
          service:
            name: carts
            port:

              number: 4003
